# AI-Marketing-Autopilot

./: .env.example  .gitignore  netlify.toml  package.json  vercel.json
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  creative_agent.py  execution_agent.py  graph.py  observer_agent.py  strategist_agent.py
apps/api/app/agents/tools/: __init__.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py  approvals.py  decisions.py  stores.py
apps/api/app/core/: __init__.py  config.py  database.py
apps/api/app/integrations/: __init__.py
apps/api/app/integrations/google_ads/: __init__.py
apps/api/app/integrations/meta_ads/: __init__.py  publisher.py
apps/api/app/integrations/shopify/: __init__.py  client.py
apps/api/app/integrations/woocommerce/: __init__.py
apps/api/app/models/: __init__.py  approval.py  auth.py  campaign.py  creative.py  decision.py  execution.py  organization.py  product.py
apps/api/app/schemas/: __init__.py
apps/api/app/services/: __init__.py  approval_service.py  ingestion_service.py
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
apps/web/src/app/: layout.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/lib/: api.ts
apps/web/src/styles/: globals.css
docs/: architecture.md
infra/supabase/migrations/: 20260418170000_initial_marketflow_schema.sql  20260418190000_add_creative_variants.sql
scripts/: test_shopify.py
