[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "marketflow-ai-api"
version = "0.1.0"
description = "FastAPI backend for MarketFlow AI, an autonomous marketing agent for e-commerce stores."
readme = "../../docs/architecture.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.4.0",
    "crewai>=0.86.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.0",
    "greenlet>=3.1.0",
    "httpx>=0.27.2",
    "langchain>=0.3.0",
    "langgraph>=0.2.34",
    "openai>=1.51.0",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "redis>=5.1.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "structlog>=24.4.0",
    "supabase>=2.8.1",
    "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
